--- a/ui/ShapeEditor.ui
+++ b/ui/ShapeEditor.ui
@@ -54,7 +54,7 @@ border-radius:3px;
 padding:12px 0px 0px 0px;
 }</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
    <property name="spacing">
     <number>4</number>
    </property>
@@ -219,9 +219,22 @@ margin: 0px;
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="bFrameReload">
+           <widget class="QPushButton" name="bReloadOrig">
+            <property name="toolTip">
+             <string>Reload the original frame from disk. Useful if you want to redo the frame from scratch or copy-paste elements, which have been deleted.</string>
+            </property>
             <property name="text">
-             <string>Reload Frame [Ctrl R]</string>
+             <string>Reload Original [Ctrl R]</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="bReloadEdit">
+            <property name="toolTip">
+             <string>Reload the edit frame from disk. Useful if you want to revert to your last edit (since there is no undo).</string>
+            </property>
+            <property name="text">
+             <string>Reload Edited [Ctrl Shift R]</string>
             </property>
            </widget>
           </item>
@@ -1202,7 +1215,7 @@ margin: 0px;
              </palette>
             </property>
             <property name="text">
-             <string>Simplify</string>
+             <string>Simplify [R]</string>
             </property>
             <property name="flat">
              <bool>false</bool>
@@ -1438,7 +1451,7 @@ margin: 0px;
              </palette>
             </property>
             <property name="text">
-             <string>Smooth</string>
+             <string>Smooth [T]</string>
             </property>
             <property name="flat">
              <bool>false</bool>
@@ -1674,7 +1687,7 @@ margin: 0px;
              </palette>
             </property>
             <property name="text">
-             <string>Basic Cleanup Macro</string>
+             <string>Simplify, Smooth [L]</string>
             </property>
             <property name="flat">
              <bool>false</bool>
@@ -2415,7 +2428,7 @@ margin: 0px;
              <bool>false</bool>
             </property>
             <property name="text">
-             <string>Shapes [S]</string>
+             <string>Shapes [X]</string>
             </property>
             <property name="flat">
              <bool>false</bool>
@@ -2654,7 +2667,7 @@ margin: 0px;
              <bool>false</bool>
             </property>
             <property name="text">
-             <string>Clear Shapes [Alt S]</string>
+             <string>Clear Shapes [Alt X]</string>
             </property>
             <property name="flat">
              <bool>false</bool>
@@ -4235,17 +4248,22 @@ margin: 0px;
       </property>
       <item>
        <widget class="QWidget" name="viewerGrp" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>320</width>
+          <height>320</height>
+         </size>
+        </property>
+        <property name="mouseTracking">
+         <bool>true</bool>
+        </property>
+        <property name="focusPolicy">
+         <enum>Qt::StrongFocus</enum>
+        </property>
         <layout class="QHBoxLayout" name="horizontalLayout_2"/>
        </widget>
       </item>
      </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="groupBox_2">
-     <property name="title">
-      <string>GroupBox</string>
-     </property>
     </widget>
    </item>
   </layout>
