--- a/ui/ShapeEditor.ui
+++ b/ui/ShapeEditor.ui
@@ -221,7 +221,7 @@ margin: 0px;
           <item>
            <widget class="QPushButton" name="bReloadOrig">
             <property name="toolTip">
-             <string>Reload the original frame from disk. Useful if you want to redo the frame from scratch or copy-paste elements, which have been deleted.</string>
+             <string>[R] Reload the original frame from disk. Useful if you want to redo the frame from scratch or copy-paste elements, which have been deleted.</string>
             </property>
             <property name="text">
              <string>Reload Original [Ctrl R]</string>
@@ -231,7 +231,7 @@ margin: 0px;
           <item>
            <widget class="QPushButton" name="bReloadEdit">
             <property name="toolTip">
-             <string>Reload the edit frame from disk. Useful if you want to revert to your last edit (since there is no undo).</string>
+             <string>[Ctrl Shift R] Reload the edit frame from disk. Useful if you want to revert to your last edit (since there is no undo).</string>
             </property>
             <property name="text">
              <string>Reload Edited [Ctrl Shift R]</string>
@@ -501,7 +501,7 @@ margin: 0px;
              </palette>
             </property>
             <property name="toolTip">
-             <string>Snap the endpoints of curves to the nearest point of another curve.</string>
+             <string> [Q] Snap the endpoints of curves to the nearest point of another curve.</string>
             </property>
             <property name="text">
              <string>Snap Endpoints [Q]</string>
@@ -742,6 +742,9 @@ margin: 0px;
               </disabled>
              </palette>
             </property>
+            <property name="toolTip">
+             <string>W</string>
+            </property>
             <property name="text">
              <string>Split Intersections [W]</string>
             </property>
@@ -977,6 +980,9 @@ margin: 0px;
                </colorrole>
               </disabled>
              </palette>
+            </property>
+            <property name="toolTip">
+             <string>E</string>
             </property>
             <property name="text">
              <string>Join Line Ends [E]</string>
@@ -1214,6 +1220,9 @@ margin: 0px;
               </disabled>
              </palette>
             </property>
+            <property name="toolTip">
+             <string>R</string>
+            </property>
             <property name="text">
              <string>Simplify [R]</string>
             </property>
@@ -1450,6 +1459,9 @@ margin: 0px;
               </disabled>
              </palette>
             </property>
+            <property name="toolTip">
+             <string>T</string>
+            </property>
             <property name="text">
              <string>Smooth [T]</string>
             </property>
@@ -1685,6 +1697,9 @@ margin: 0px;
                </colorrole>
               </disabled>
              </palette>
+            </property>
+            <property name="toolTip">
+             <string>L</string>
             </property>
             <property name="text">
              <string>Simplify, Smooth [L]</string>
@@ -1929,6 +1944,9 @@ margin: 0px;
               </disabled>
              </palette>
             </property>
+            <property name="toolTip">
+             <string>D</string>
+            </property>
             <property name="text">
              <string>Update Lines [D]</string>
             </property>
@@ -2164,6 +2182,9 @@ margin: 0px;
                </colorrole>
               </disabled>
              </palette>
+            </property>
+            <property name="toolTip">
+             <string>Del</string>
             </property>
             <property name="autoFillBackground">
              <bool>false</bool>
@@ -3936,247 +3957,22 @@ margin: 0px;
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="bi_shapeDelete">
-           <property name="palette">
-            <palette>
-             <active>
-              <colorrole role="WindowText">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Button">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>119</red>
-                 <green>119</green>
-                 <blue>119</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Text">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="ButtonText">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Base">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>119</red>
-                 <green>119</green>
-                 <blue>119</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Window">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>119</red>
-                 <green>119</green>
-                 <blue>119</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Shadow">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>170</red>
-                 <green>0</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="PlaceholderText">
-               <brush brushstyle="NoBrush">
-                <color alpha="128">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-             </active>
-             <inactive>
-              <colorrole role="WindowText">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Button">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>119</red>
-                 <green>119</green>
-                 <blue>119</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Text">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="ButtonText">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Base">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>119</red>
-                 <green>119</green>
-                 <blue>119</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Window">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>119</red>
-                 <green>119</green>
-                 <blue>119</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Shadow">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>170</red>
-                 <green>0</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="PlaceholderText">
-               <brush brushstyle="NoBrush">
-                <color alpha="128">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-             </inactive>
-             <disabled>
-              <colorrole role="WindowText">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Button">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>119</red>
-                 <green>119</green>
-                 <blue>119</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Text">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="ButtonText">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Base">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>119</red>
-                 <green>119</green>
-                 <blue>119</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Window">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>119</red>
-                 <green>119</green>
-                 <blue>119</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="Shadow">
-               <brush brushstyle="SolidPattern">
-                <color alpha="255">
-                 <red>170</red>
-                 <green>0</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-              <colorrole role="PlaceholderText">
-               <brush brushstyle="NoBrush">
-                <color alpha="128">
-                 <red>255</red>
-                 <green>204</green>
-                 <blue>0</blue>
-                </color>
-               </brush>
-              </colorrole>
-             </disabled>
-            </palette>
+          <widget class="Line" name="vlineSep_5">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
            </property>
-           <property name="autoFillBackground">
-            <bool>false</bool>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="bi_selectionDist">
+           <property name="minimum">
+            <number>1</number>
            </property>
-           <property name="text">
-            <string>Delete Shape</string>
+           <property name="maximum">
+            <number>200</number>
            </property>
-           <property name="checkable">
-            <bool>true</bool>
-           </property>
-           <property name="autoExclusive">
-            <bool>true</bool>
-           </property>
-           <property name="flat">
-            <bool>false</bool>
+           <property name="value">
+            <number>4</number>
            </property>
           </widget>
          </item>
